@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.110.75 Kernel Configuration
+# Linux/mips 3.4.110.82 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -801,8 +801,8 @@ CONFIG_MTD_SPI_FAST_CLOCK=y
 CONFIG_MTD_SPI_READ_NORM=y
 # CONFIG_MTD_SPI_READ_FAST is not set
 # CONFIG_RT2880_FLASH_4M is not set
-CONFIG_RT2880_FLASH_8M=y
-# CONFIG_RT2880_FLASH_16M is not set
+# CONFIG_RT2880_FLASH_8M is not set
+CONFIG_RT2880_FLASH_16M=y
 # CONFIG_RT2880_FLASH_32M is not set
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1FC00000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x0400000
@@ -1004,14 +1004,13 @@ CONFIG_LEGACY_PTY_COUNT=64
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-CONFIG_RALINK_GPIO_BTN_RESET=41
-CONFIG_RALINK_GPIO_BTN_WPS=43
+CONFIG_RALINK_GPIO_BTN_RESET=18
+CONFIG_RALINK_GPIO_BTN_WPS=0
 CONFIG_RALINK_GPIO_LED=y
-# CONFIG_RALINK_GPIO_LED_SYS is not set
-CONFIG_RALINK_GPIO_LED_USB=y
-CONFIG_RALINK_GPIO_LED_VPN=y
-CONFIG_RALINK_GPIO_USB_LED=48
-CONFIG_RALINK_GPIO_VPN_LED=46
+CONFIG_RALINK_GPIO_LED_SYS=y
+# CONFIG_RALINK_GPIO_LED_USB is not set
+# CONFIG_RALINK_GPIO_LED_VPN is not set
+CONFIG_RALINK_GPIO_SYS_LED=24
 # CONFIG_RALINK_HSDMA is not set
 # CONFIG_RALINK_GDMA is not set
 # CONFIG_RALINK_SPI is not set
@@ -1271,7 +1270,30 @@ CONFIG_USB_SERIAL_OPTION=m
 # OTG and related infrastructure
 #
 # CONFIG_NOP_USB_XCEIV is not set
-# CONFIG_MMC is not set
+CONFIG_MMC=y
+# CONFIG_MMC_DEBUG is not set
+# CONFIG_MMC_UNSAFE_RESUME is not set
+
+#
+# MMC/SD/SDIO Card Drivers
+#
+CONFIG_MMC_BLOCK=y
+CONFIG_MMC_BLOCK_MINORS=8
+CONFIG_MMC_BLOCK_BOUNCE=y
+# CONFIG_SDIO_UART is not set
+# CONFIG_MMC_TEST is not set
+
+#
+# MMC/SD/SDIO Host Controller Drivers
+#
+# CONFIG_MMC_SDHCI is not set
+# CONFIG_MMC_CB710 is not set
+# CONFIG_MMC_VIA_SDMMC is not set
+# CONFIG_MMC_VUB300 is not set
+# CONFIG_MMC_USHC is not set
+CONFIG_MTK_MMC=y
+# CONFIG_MTK_AEE_KDUMP is not set
+# CONFIG_MTK_MMC_CD_POLL is not set
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
@@ -1334,7 +1356,8 @@ CONFIG_FANOTIFY=y
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
-# CONFIG_FUSE_FS is not set
+CONFIG_FUSE_FS=m
+# CONFIG_CUSE is not set
 
 #
 # Caches
@@ -1759,9 +1782,9 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 CONFIG_RT_FIRST_IF_INTERNAL_PA_INTERNAL_LNA=y
 # CONFIG_RT_FIRST_IF_INTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_RT_FIRST_IF_EXTERNAL_PA_EXTERNAL_LNA is not set
-# CONFIG_RT_SECOND_IF_INTERNAL_PA_INTERNAL_LNA is not set
+CONFIG_RT_SECOND_IF_INTERNAL_PA_INTERNAL_LNA=y
 # CONFIG_RT_SECOND_IF_INTERNAL_PA_EXTERNAL_LNA is not set
-CONFIG_RT_SECOND_IF_EXTERNAL_PA_EXTERNAL_LNA=y
+# CONFIG_RT_SECOND_IF_EXTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_BAND_STEERING is not set
 CONFIG_MAX_CLIENTS=72
 
